@@ -4,6 +4,7 @@ CHANGES-1.4.txt
 CHANGES IN CUPS V1.4.4
 
 	- Documentation updates (STR #3453)
+	- The scheduler did not always remove job control files (STR #3425)
 	- The scheduler could crash on restart if classes were defined
 	  (STR #3524)
 	- The scheduler no longer looks up network interface hostnames by
